--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,10 @@ name = "texture_wizard"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 serde = { version = "1.0.188", features = ["derive"]}
 serde_yaml = "0.9"
 anyhow = "1.0"
 image = "0.24.7"
+sdl2 = "0.35.2"
+gl = "0.14.0"
