--- a/examples/project.tw.yaml
+++ b/examples/project.tw.yaml
@@ -1,17 +1,21 @@
 pipeline:
-  - shader: shader_1.frag
-    inputs:
-      - type: file
-        name: markup.png
-        uniform: markup
-    output:
-      type: memory
-      name: noise_1 
+#   - shader: shader_1.frag
+#     inputs:
+#       - type: file
+#         name: markup.png
+#         uniform: markup
+#     output:
+#       type: memory
+#       name: noise_1 
+#       width: 64
+#       height: 64
   - shader: shader_2.frag
-    inputs:
-      - type: memory
-        name: noise_1
-        uniform: noise
+    inputs: []
+      # - type: file
+      #   name: markup.png
+      #   uniform: noise
     output:
       type: file
       name: result.png
+      width: 64
+      height: 64
