Add fake and real positions

--- a/examples/project.tw.yaml
+++ b/examples/project.tw.yaml
@@ -9,6 +9,7 @@ pipeline:
       name: noise_1 
       width: 64
       height: 64
+      preview: simple
   - shader: shader_2.frag
     inputs:
       - type: memory
