--- a/examples/project.tw.yaml
+++ b/examples/project.tw.yaml
@@ -10,12 +10,12 @@ pipeline:
       width: 64
       height: 64
   - shader: shader_2.frag
-    inputs:
-      - type: memory
-        name: noise_1
-        uniform: noise
+    inputs: []
+      # - type: memory
+      #   name: noise_1
+      #   uniform: noise
     output:
       type: file
       name: out/result.png
-      width: 64
-      height: 64
+      width: 512
+      height: 512
