--- a/examples/project.tw.yaml
+++ b/examples/project.tw.yaml
@@ -9,14 +9,16 @@ pipeline:
       name: noise_1 
       width: 64
       height: 64
+      preview: simple
   - shader: shader_2.frag
-    inputs: []
-      # - type: memory
-      #   name: noise_1
-      #   uniform: noise
+    # debug_shader: out/debug_2.glsl
+    inputs:
+      - type: memory
+        name: noise_1
+        uniform: noise
     output:
       type: file
       name: out/result.png
       width: 200
       height: 200
-      # preview: simple
+      preview: simple
