--- a/examples/project.tw.yaml
+++ b/examples/project.tw.yaml
@@ -1,5 +1,6 @@
 pipeline:
   - shader: shader_1.frag
+    debug_shader: out/debug_1.glsl
     inputs:
       - type: file
         name: markup.png
@@ -11,7 +12,7 @@ pipeline:
       height: 64
       # preview: simple
   - shader: shader_2.frag
-    # debug_shader: out/debug_2.glsl
+    debug_shader: out/debug_2.glsl
     inputs: []
       # - type: memory
       #   name: noise_1
